exports[`test renders danger 1`] = `
<div
  className="Flex container danger"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "boxSizing": "border-box",
      "display": "flex",
      "justifyContent": "center",
      "msAlignItems": "center",
      "msJustifyContent": "center"
    }
  }>
  danger
</div>
`;

exports[`test renders default as info 1`] = `
<div
  className="Flex container info"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "boxSizing": "border-box",
      "display": "flex",
      "justifyContent": "center",
      "msAlignItems": "center",
      "msJustifyContent": "center"
    }
  }>
  default
</div>
`;

exports[`test renders info 1`] = `
<div
  className="Flex container info"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "boxSizing": "border-box",
      "display": "flex",
      "justifyContent": "center",
      "msAlignItems": "center",
      "msJustifyContent": "center"
    }
  }>
  info
</div>
`;

exports[`test renders offline 1`] = `
<div
  className="Flex container offline"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "boxSizing": "border-box",
      "display": "flex",
      "justifyContent": "center",
      "msAlignItems": "center",
      "msJustifyContent": "center"
    }
  }>
  offline
</div>
`;

exports[`test renders success 1`] = `
<div
  className="Flex container success"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "boxSizing": "border-box",
      "display": "flex",
      "justifyContent": "center",
      "msAlignItems": "center",
      "msJustifyContent": "center"
    }
  }>
  success
</div>
`;

exports[`test renders warning 1`] = `
<div
  className="Flex container warning"
  style={
    Object {
      "WebkitAlignItems": "center",
      "WebkitJustifyContent": "center",
      "alignItems": "center",
      "boxSizing": "border-box",
      "display": "flex",
      "justifyContent": "center",
      "msAlignItems": "center",
      "msJustifyContent": "center"
    }
  }>
  warning
</div>
`;
